--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat-app",
-  "homepage": "https://github.com/Vinay-Singhh/ReactChatXapp.git",
+  "homepage": "https://Vinay-Singhh.github.io/ReactChatXapp",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
